refactor: 가상 스레드로 이미지 병렬 다운로드